--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Python Crash Course, 2nd Edition
 description: Online Resources for Python Crash Course, from No Starch Press
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ehmatthes.github.io/pcc_2e" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mavaddat-javid-education.github.io/pcc_2e" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["vendor/", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
@@ -27,13 +27,13 @@ search_enabled: true
 # Aux links for the upper right navigation
 aux_links:
   "Python Crash Course on GitHub":
-    - "//github.com/ehmatthes/pcc_2e"
+    - "//github.com/mavaddat-javid-education/pcc_2e"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
-ga_tracking: UA-29433314-13
+ga_tracking: G-H4RHCXF5FH
 
 theme: jekyll-theme-merlot
