--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,14 @@
         "defines.h": "c",
         "missing.h": "c",
         "dosish.h": "c"
-    }
+    },
+    "cSpell.words": [
+        "API's",
+        "Matthes",
+        "Pygal",
+        "Pygame",
+        "cheatsheets",
+        "ehmatthes",
+        "matplotlib"
+    ]
 }
