--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\MavaddatJavid\\.pyenv\\pyenv-win\\versions\\3.10.0a7\\python.exe"
+    "python.pythonPath": "C:\\Users\\MavaddatJavid\\.pyenv\\pyenv-win\\versions\\3.10.0a7\\python.exe",
+    "cSpell.words": [
+        "Matthes"
+    ]
 }
