--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\MavaddatJavid\\.pyenv\\pyenv-win\\versions\\3.10.0a7\\python.exe",
+    "python.pythonPath": "C:\\Users\\MavaddatJavid\\.pyenv\\pyenv-win\\versions\\3.10.0b3\\python.exe",
     "cSpell.words": [
         "Matthes"
     ],
