--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ search_enabled: true
 # Aux links for the upper right navigation
 aux_links:
   "Python Crash Course on GitHub":
-    - "//github.com/mavaddat-javid-education/pcc_2e"
+    - "//github.com/mavjav-edu/pcc_2e"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
