--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,6 @@ color_scheme: nil
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
-ga_tracking: G-H4RHCXF5FH
+ga_tracking: G-H1B6T2W9DJ
 
 theme: just-the-docs
