--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -13,13 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: ruby/setup-ruby@v1.84.0
       with:
         submodules: true
+        bundler: 'Gemfile.lock'
     - name: Build the site in the jekyll/builder container
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future --trace"
+        jekyll/builder:latest /bin/bash -c " chmod -R 777  chmod -R 777 /srv/jekyll && jekyll build --future --trace"
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
