--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -17,7 +17,9 @@ jobs:
         submodules: true
     - uses: ruby/setup-ruby@v1.84.0
       with:
+        ruby-version: 3.0
         bundler: 'Gemfile.lock'
+        bundler-cache: true
     - name: Build the site in the jekyll/builder container
       run: |
         docker run \
