--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c " chmod -R 777  chmod -R 777 /srv/jekyll && jekyll build --future --trace"
+        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future --trace"
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
