--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -22,9 +22,7 @@ jobs:
         bundler-cache: true
     - name: Build the site in the jekyll/builder container
       run: |
-        docker run \
-        -v ${{ github.workspace }}:/vendor/bundle/jekyll -v ${{ github.workspace }}/_site:/vendor/bundle/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /vendor/bundle/jekyll && jekyll build --future --trace"
+        bundle exec jekyll build --future
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
