--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ logo: "/assets/images/favicon-32x32.png"
 permalink: pretty
 exclude: ["vendor/", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile","normalize.scss.md"]
 
+timezone: America/Vancouver
+
 # Enable or disable the site search
 search_enabled: true
 
