--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/glob": "^7.2.0",
+    "rollup-plugin-uglify": "^5.0.2",
     "stylelint": "^14.0.0",
     "stylelint-config-primer": "^11.1.1"
   },
@@ -30,11 +32,11 @@
   "scripts": {
     "test": "stylelint '**/*.scss'",
     "watch": "bundle exec jekyll serve",
-    "build": "npm run build:scripts && bundle exec jekyll build",
+    "build": "npm run build:scripts && cross-env JEKYLL_ENV=production bundle exec jekyll build",
     "watch:scripts": "npm run build:scripts -- -w",
     "build:scripts": "rollup -c"
   },
-  "homepage": "https://github.com/pmarsceill/just-the-docs#readme",
+  "homepage": "https://mavjav-edu.github.io/pcc_2e/",
   "main": "index.js",
   "directories": {
     "lib": "lib"
