--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -15,6 +15,25 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Populate resources built from external files
+      run: |
+        apt-get update && && apt-get upgrade -y && apt-get install -y rsync;
+        docker run \
+        --volume="${{ github.workspace }}" \
+        apt-get update && && apt-get upgrade -y && apt-get install -y rsync \
+        curl -sL https://raw.githubusercontent.com/pypa/pip/main/docs/html/installation.md -o ./chapter_12/installing_pip.md \
+        echo "---" > ./chapter_12/pip_markup_header.tmp \ 
+        echo "layout: default" >> ./chapter_12/pip_markup_header.tmp \
+        echo "title: Installing and Using PIP" >> ./chapter_12/pip_markup_header.tmp \
+        echo "nav_order: 10" >> ./chapter_12/pip_markup_header.tmp \
+        echo "description: \"How to install the Python package manager PIP.\"" >> ./chapter_12/pip_markup_header.tmp \
+        echo "grand_parent: Solutions" >> ./chapter_12/pip_markup_header.tmp \
+        echo "parent: Chapter 12" >> ./chapter_12/pip_markup_header.tmp \
+        echo "has_children: false" >> ./chapter_12/pip_markup_header.tmp \
+        echo "---" >> ./chapter_12/pip_markup_header.tmp \
+        cat ./chapter_12/pip_markup_header.tmp ./chapter_12/installing_pip.md > ./chapter_12/installing_pip.tmp \
+        mv ./chapter_12/installing_pip.tmp ./chapter_12/installing_pip.md \
+        rm ./chapter_12/pip_markup_header.tmp
     - uses: ruby/setup-ruby@v1.84.0
       with:
         ruby-version: 3.0
@@ -22,25 +41,6 @@ jobs:
         bundler-cache: true
     - name: Build the site in the jekyll/builder container
       run: |
-        apt-get update && && apt-get upgrade -y && apt-get install -y rsync
-        # Download installing_pip.md
-        curl -sL https://raw.githubusercontent.com/pypa/pip/main/docs/html/installation.md -o ./chapter_12/installing_pip.md
-        # Write the Liquid markup header to ./chapter_12/pip_markup_header.tmp
-        echo "---" > ./chapter_12/pip_markup_header.tmp
-        echo "layout: default" >> ./chapter_12/pip_markup_header.tmp
-        echo "title: Installing and Using PIP" >> ./chapter_12/pip_markup_header.tmp
-        echo "nav_order: 10" >> ./chapter_12/pip_markup_header.tmp
-        echo "description: \"How to install the Python package manager PIP.\"" >> ./chapter_12/pip_markup_header.tmp
-        echo "grand_parent: Solutions" >> ./chapter_12/pip_markup_header.tmp
-        echo "parent: Chapter 12" >> ./chapter_12/pip_markup_header.tmp
-        echo "has_children: false" >> ./chapter_12/pip_markup_header.tmp
-        echo "---" >> ./chapter_12/pip_markup_header.tmp
-        # Conjoin the header to the markdown content
-        cat ./chapter_12/pip_markup_header.tmp ./chapter_12/installing_pip.md > ./chapter_12/installing_pip.tmp
-        # Rename installing_pip.tmp to installing_pip.md
-        mv ./chapter_12/installing_pip.tmp ./chapter_12/installing_pip.md
-        # Remove the temporary file
-        rm ./chapter_12/pip_markup_header.tmp
         bundle exec jekyll build --future
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@3.7.1
