--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -2,9 +2,9 @@ name: Jekyll site CI
 
 on:
   push:
-    branches: [ gh-pages ]
+    branches: gh-pages
   pull_request:
-    branches: [ gh-pages ]
+    branches: gh-pages
 
 jobs:
   build:
@@ -62,10 +62,10 @@ jobs:
       run: |
         bundle exec jekyll build --future
     - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+      uses: JamesIves/github-pages-deploy-action@4.1.6
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
         folder: _site
         target-folder: _site
-        clean: false
+        clean: true
