--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,13 @@
         "ehmatthes",
         "matplotlib"
     ],
-    "python.pythonPath": "C:\\Users\\mavad\\.pyenv\\pyenv-win\\versions\\3.10.0\\python.exe"
+    "python.pythonPath": "C:\\Users\\mavad\\.pyenv\\pyenv-win\\versions\\3.10.0\\python.exe",
+    "spellright.language": [
+        "en"
+    ],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext"
+    ]
 }
