--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,17 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole site, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing these this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Python Crash Course, 2nd Edition
 description: Online Resources for Python Crash Course, from No Starch Press
-baseurl: "/pcc_2e" # the subpath of your site, e.g. /blog
-url: "https://mavjav-edu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/pcc_2e"
+url: "https://mavjav-edu.github.io"
 logo: "assets/images/pcc_logo_csyivv_c_scale,w_788.png"
 permalink: pretty
 exclude: ["vendor/", "node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile","normalize.scss.md",".vscode/*","rollup.config.js", "docs/tests/"]
 
 timezone: America/Vancouver
+language: en-CA
+lang_direction: ltr
 
-# Enable or disable the site search
-# Supports true (default) or false
 search_enabled: true
 
-# Aux links for the upper right navigation
 aux_links:
   "Python Crash Course on GitHub":
     - "//github.com/mavjav-edu/pcc_2e"
@@ -37,11 +21,10 @@ relative_links:
   collections: false
 
 
-# Color scheme currently only supports "dark" or nil (default)
 color_scheme: dark
+theme_color: \#e6e1e8
+theme_background_color: \#27262b
 
-# Google Analytics Tracking (optional)
-# e.g, UA-1234567-89
 ga_tracking: G-H1B6T2W9DJ
 
 plugins:
