--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ relative_links:
 
 
 color_scheme: dark
-theme_color: #e6e1e8
-theme_background_color: #27262b
+theme_color: "#e6e1e8"
+theme_background_color: "#27262b"
 
 ga_tracking: G-H1B6T2W9DJ
 
